--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^7.2.0",
     "@mui/x-date-pickers": "^8.9.0",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1"
