--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
     "sass": "^1.89.2",
+    "supabase": "^2.33.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
