--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@mui/x-date-pickers": "^8.9.0",
     "@supabase/supabase-js": "^2.53.0",
     "date-fns": "^4.1.0",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
