--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^7.2.0",
     "@mui/x-date-pickers": "^8.9.0",
     "@supabase/supabase-js": "^2.53.0",
+    "@tanstack/react-query": "^5.85.3",
     "date-fns": "^4.1.0",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
