--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -387,3 +387,25 @@ entrypoint = "./functions/send-gmail-notification/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/send-gmail-notification/*.html" ]
+
+[functions.create-swap-request]
+enabled = true
+verify_jwt = true
+import_map = "./functions/create-swap-request/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/create-swap-request/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/create-swap-request/*.html" ]
+
+[functions.respond-swap-request]
+enabled = true
+verify_jwt = true
+import_map = "./functions/respond-swap-request/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/respond-swap-request/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/respond-swap-request/*.html" ]
