--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -409,3 +409,14 @@ entrypoint = "./functions/respond-swap-request/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/respond-swap-request/*.html" ]
+
+[functions.notify-director-new-song]
+enabled = true
+verify_jwt = true
+import_map = "./functions/notify-director-new-song/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/notify-director-new-song/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/notify-director-new-song/*.html" ]
