--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -442,3 +442,14 @@ entrypoint = "./functions/send-bulk-welcome-email/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/send-bulk-welcome-email/*.html" ]
+
+[functions.send-monthly-reminder]
+enabled = true
+verify_jwt = true
+import_map = "./functions/send-monthly-reminder/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/send-monthly-reminder/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/send-monthly-reminder/*.html" ]
